scrollbar issue

--- a/packages/web/src/styles/communication.scss
+++ b/packages/web/src/styles/communication.scss
@@ -244,6 +244,7 @@
           z-index: 2;
           width: 100%;
           overflow-x: auto;
+          overflow-y: hidden;
           .pc-each-screen {
             display: flex;
             width: 100px;
