--- a/packages/web/src/styles/index.css
+++ b/packages/web/src/styles/index.css
@@ -428,7 +428,7 @@ top attachment etc.
 .communicate .content .call-screen .video-container { height: calc(100% - 35px); }
 .communicate .content .call-screen .video-container .pc-main-screen { width: 100%; height: 100%; }
 .communicate .content .call-screen .video-container .pc-main-screen .pc-main-video { background-color: black; object-fit: contain; height: 100%; width: 100%; }
-.communicate .content .call-screen .video-container .pc-user-screens { display: flex; position: absolute; z-index: 2; width: 100%; overflow-x: auto; }
+.communicate .content .call-screen .video-container .pc-user-screens { display: flex; position: absolute; z-index: 2; width: 100%; overflow-x: auto; overflow-y: hidden; }
 .communicate .content .call-screen .video-container .pc-user-screens .pc-each-screen { display: flex; width: 100px; height: 100px; background-color: black; justify-content: center; align-items: center; flex-direction: column; border: 3px solid #fff; border-radius: 50px; margin: 10px; overflow: hidden; }
 .communicate .content .call-screen .video-container .pc-maxmin-btn { position: absolute; right: 0; display: none; padding: 5px; z-index: 3; }
 .communicate .content .call-screen .video-container .pc-maxmin-btn .pc-control-btn { background: #1d4354; color: #fff; height: 40px; width: 40px; font-size: 30px; border-radius: 40px; }
